<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Todolist</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="schedule">今日计划</string>
    <string name="prev_page">上一页</string>
    <string name="next_page">下一页</string>
    <string name="sort">排序</string>
    <string name="mode">模板</string>
    <string name="title_activity_start_time">StartTimeActivity</string>
    <string name="title_activity_end_time">EndTimeActivity</string>
    <string name="title_activity_start">StartActivity</string>
    <string name="title_activity_add_task">AddTaskActivity</string>
    <string name="radio1">很重要-很紧急</string>
    <string name="radio2">很重要-不紧急</string>
    <string name="radio3">不重要-很紧急</string>
    <string name="radio4">不重要-不紧急</string>
    <string name="title_activity_date_time">DateTimeActivity</string>

</resources>
