<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:padding="@dimen/widget_margin" android:background="@android:color/transparent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@android:color/transparent">

        <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:background="@android:color/holo_red_light">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/schedule"
                android:id="@+id/schedule"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prev_page"
                android:id="@+id/prev_page"
                android:layout_toLeftOf="@+id/pageText"
                android:layout_centerVertical="true"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="   1/2   "
                android:id="@+id/pageText"
                android:layout_centerInParent="true"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/next_page"
                android:id="@+id/next_page"
                android:layout_toRightOf="@+id/pageText"
                android:layout_centerVertical="true"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sort"
                android:id="@+id/sort"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp" />

        </RelativeLayout>



            <ListView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/widgetListView"
                android:layout_gravity="center_vertical"
                android:background="#e6ffffff"
                android:layout_weight="16" />


        <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@android:color/holo_blue_light"
            android:layout_weight="1">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Trigger"
                android:id="@+id/trigger"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="false"
                android:layout_centerVertical="true"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="AddItem"
                android:id="@+id/addItem"
                android:layout_centerInParent="true"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mode"
                android:id="@+id/mode"
                android:layout_alignParentTop="false"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp" />
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>