<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.liujiang.todolist.AddTaskActivity"
    android:orientation="vertical">

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="584dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:stretchColumns="0,1,2"
        android:layout_above="@+id/bottomline">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginBottom="30dp">
            <TextView android:text="TodoTask"
                android:layout_width="match_parent" />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/taskEditText"
                android:layout_column="0"
                android:layout_span="3" />
        </TableRow>

        <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:id="@+id/radioGroup">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/radio2"
                android:id="@+id/radioButton2"
                android:layout_gravity="right"
                android:layout_marginRight="20dp"
                android:textColor="@android:color/holo_orange_dark" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/radio1"
                android:id="@+id/radioButton1"
                android:checked="false"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="-40dp"
                android:textColor="@android:color/holo_red_dark" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/radio4"
                android:id="@+id/radioButton4"
                android:layout_gravity="right"
                android:layout_marginRight="20dp"
                android:textColor="@android:color/holo_green_dark" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/radio3"
                android:id="@+id/radioButton3"
                android:layout_marginTop="-40dp"
                android:layout_marginLeft="20dp"
                android:textColor="@android:color/holo_blue_dark" />

        </RadioGroup>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Address"
                android:id="@+id/address"
                android:layout_column="0" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/address_spinner"
                android:layout_column="1"
                android:layout_span="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New Text"
                android:id="@+id/starttime_textView"
                android:layout_column="2" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Start"
                android:id="@+id/starttime_button"
                android:layout_column="3" />
        </TableRow>
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginBottom="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="People"
                android:id="@+id/people"
                android:layout_column="0" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/people_spinner"
                android:layout_column="1"
                android:layout_span="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New Text"
                android:id="@+id/endtime_textView"
                android:layout_column="2" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="End"
                android:id="@+id/endtime_button"
                android:layout_column="3" />
        </TableRow>
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginBottom="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Project"
                android:id="@+id/project"
                android:layout_column="0" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/project_spinner"
                android:layout_column="1"
                android:layout_span="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Label"
                android:id="@+id/label"
                android:layout_column="2" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/label_spinner"
                android:layout_column="1"
                android:layout_span="1" />
        </TableRow>
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Loop?"
                android:id="@+id/loop"
                android:layout_column="0" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/loop_spinner"
                android:layout_column="1"
                android:layout_span="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="SubTask"
                android:id="@+id/subtask_textview"
                android:layout_column="2" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sub Task"
                android:id="@+id/subtask_main"
                android:layout_column="3" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <ListView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/listView"
                android:layout_column="0"
                android:background="@android:color/holo_red_light"
                android:layout_span="4"
                android:layout_weight="1" />
        </TableRow>

    </TableLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:id="@+id/bottomline"
        android:layout_alignParentBottom="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Text"
            android:id="@+id/textView"
            android:layout_weight="1" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editText2"
            android:layout_weight="8" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="OK"
            android:id="@+id/button_OK"
            android:layout_weight="1" />
    </LinearLayout>
</RelativeLayout>
